PKCS11 provide code updated