@@ -44,16 +44,24 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.mockito/mockito-core -->
+		<dependency>
+		    <groupId>org.mockito</groupId>
+		    <artifactId>mockito-core</artifactId>
+		    <version>2.28.1</version>
+		    <scope>test</scope>
+		</dependency>
+		
 		<dependency>
 			<groupId>org.powermock</groupId>
 			<artifactId>powermock-module-junit4</artifactId>
-			<version>${powermock.beta.version}</version>
+			<version>2.0.2</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.powermock</groupId>
 			<artifactId>powermock-api-mockito2</artifactId>
-			<version>${powermock.beta.version}</version>
+			<version>2.0.7</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
@@ -62,4 +70,17 @@
 			<version>${htrace-core4}</version>
 		</dependency>
 	</dependencies>
+	<build>
+		<plugins>			
+			<plugin>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>${maven.surefire.plugin.version}</version>
+				<configuration>
+					<argLine>
+						--add-opens java.base/jdk.internal.loader=ALL-UNNAMED --illegal-access=permit
+					</argLine>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
 </project>
